corrections to HH long wall, Two Tier Main Right topo. Headings h1, h2 to text-wrap: balance

--- a/assets/scss/global2020.scss
+++ b/assets/scss/global2020.scss
@@ -188,16 +188,20 @@ header {
     margin: 1em 0;
 }
 
-h1 {
+h1,
+h2 {
     color: var(--heading-color);
-    /* text-shadow: 2px 2px var(--container-bg), 3px 3px var(--heading-color); */
+    line-height: 1;
+    text-wrap: balance;
+
+}
+
+h1 {
     font-weight: 700;
     font-size: 4.2em;
-    line-height: 1;
     letter-spacing: -0.05em;
-    display: block;
+    // display: block;
     margin: 0;
-
 }
 
 h1>small {
@@ -207,9 +211,7 @@ h1>small {
 
 h2 {
     font-size: 2em;
-    color: var(--heading-color);
     margin: 2.5rem 0 .5em 0;
-    line-height: 1;
 }
 
 .content> :first-child {
